--- a/src/meta/binaries/Cargo.toml
+++ b/src/meta/binaries/Cargo.toml
@@ -49,7 +49,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
 tokio-stream = { workspace = true }
-url = "2.3.1"
+url = { workspace = true }
 
 [[bin]]
 name = "databend-meta"
