--- a/src/query/service/Cargo.toml
+++ b/src/query/service/Cargo.toml
@@ -175,9 +175,11 @@ tokio-stream = { workspace = true, features = ["net"] }
 toml = { version = "0.8", default-features = false }
 tonic = { workspace = true }
 typetag = { workspace = true }
+url = { workspace = true }
 uuid = { workspace = true }
 walkdir = { workspace = true }
 xorf = { version = "0.11.0", default-features = false, features = ["binary-fuse"] }
+
 [dev-dependencies]
 arrow-cast = { workspace = true }
 criterion = { workspace = true }
@@ -195,7 +197,6 @@ rmp-serde = "1.1.1"
 temp-env = "0.3.0"
 tempfile = "3.4.0"
 tower = "0.4.13"
-url = "2.3.1"
 wiremock = "0.6"
 
 [build-dependencies]
