--- a/.github/actions/test_stateless_cluster_linux/action.yml
+++ b/.github/actions/test_stateless_cluster_linux/action.yml
@@ -23,7 +23,7 @@ runs:
     - name: Start UDF Server
       shell: bash
       run: |
-        pip install databend-udf
+        pip install databend-udf>=0.2.6
         python3 tests/udf/udf_server.py &
         sleep 2
 
