--- a/.github/workflows/reuse.sqllogic.yml
+++ b/.github/workflows/reuse.sqllogic.yml
@@ -66,7 +66,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Start UDF Server
         run: |
-          pip install databend-udf
+          pip install databend-udf>=0.2.6
           python3 tests/udf/udf_server.py &
           sleep 2
       - uses: ./.github/actions/test_sqllogic_standalone_linux
