--- a/src/query/functions/Cargo.toml
+++ b/src/query/functions/Cargo.toml
@@ -10,14 +10,14 @@ edition = { workspace = true }
 doctest = false
 
 [dependencies]
-base64 = "0.21.0"
-blake3 = "1.3.1"
+base64 = { workspace = true }
+blake3 = { workspace = true }
 borsh = { workspace = true, features = ["derive"] }
-bstr = "1.0.1"
+bstr = { workspace = true }
 bumpalo = { workspace = true }
 chrono = { workspace = true }
 chrono-tz = { workspace = true }
-crc32fast = "1.3.2"
+crc32fast = { workspace = true }
 criterion = { workspace = true }
 ctor = { workspace = true }
 databend-common-arrow = { workspace = true }
@@ -28,47 +28,47 @@ databend-common-hashtable = { workspace = true }
 databend-common-io = { workspace = true }
 databend-common-openai = { workspace = true }
 databend-common-vector = { workspace = true }
-dtparse = { git = "https://github.com/datafuse-extras/dtparse.git", rev = "de0a15b" }
+dtparse = { workspace = true }
 ethnum = { workspace = true }
 geo = { workspace = true }
-geo-types = "0.7.13"
-geohash = "0.13.0"
+geo-types = { workspace = true }
+geohash = { workspace = true }
 geos = { workspace = true }
 geozero = { workspace = true }
-h3o = "0.4.0"
-hex = "0.4.3"
+h3o = { workspace = true }
+hex = { workspace = true }
 itertools = { workspace = true }
-jaq-core = "1.5.1"
-jaq-interpret = "1.5.0"
-jaq-parse = "1.0.3"
-jaq-std = "1.6.0"
+jaq-core = { workspace = true }
+jaq-interpret = { workspace = true }
+jaq-parse = { workspace = true }
+jaq-std = { workspace = true }
 jsonb = { workspace = true }
-lexical-core = "0.8.5"
-libm = "0.2.6"
+lexical-core = { workspace = true }
+libm = { workspace = true }
 match-template = { workspace = true }
-md-5 = "0.10.5"
-naive-cityhash = "0.2.0"
-num-traits = "0.2.15"
+md-5 = { workspace = true }
+naive-cityhash = { workspace = true }
+num-traits = { workspace = true }
 once_cell = { workspace = true }
 proj4rs = { workspace = true }
 rand = { workspace = true }
 regex = { workspace = true }
-roaring = "0.10.1"
+roaring = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-sha1 = "0.10.5"
+sha1 = { workspace = true }
 sha2 = { workspace = true }
-simdutf8 = "0.1.4"
-simple_hll = { version = "0.0.1", features = ["serde_borsh"] }
-siphasher = "0.3"
-strength_reduce = "0.2.3"
-stringslice = "0.2.0"
-twox-hash = "1.6.3"
+simdutf8 = { workspace = true }
+simple_hll = { workspace = true, features = ["serde_borsh"] }
+siphasher = { workspace = true }
+strength_reduce = { workspace = true }
+stringslice = { workspace = true }
+twox-hash = { workspace = true }
 
 [dev-dependencies]
-comfy-table = "6"
+comfy-table = { workspace = true }
 databend-common-ast = { workspace = true }
-goldenfile = "1.4"
+goldenfile = { workspace = true }
 
 [[bench]]
 name = "bench"
