--- a/src/common/cloud_control/Cargo.toml
+++ b/src/common/cloud_control/Cargo.toml
@@ -11,22 +11,24 @@ doctest = false
 test = true
 
 [dependencies]
-async-backtrace = { workspace = true }
-chrono = { workspace = true }
 databend-common-base = { workspace = true }
 databend-common-exception = { workspace = true }
+
+async-backtrace = { workspace = true }
+chrono = { workspace = true }
+hyper-util = { workspace = true }
 prost = { workspace = true }
 serde = { workspace = true }
 tonic = { workspace = true }
 
 [build-dependencies]
-lenient_semver = "0.4.2"
+lenient_semver = { workspace = true }
 prost-build = { workspace = true }
 semver = { workspace = true }
 tonic-build = { workspace = true }
 
 [dev-dependencies]
-tower = { version = "0.4" }
+tower = { workspace = true, features = ["util"] }
 
 [lints]
 workspace = true
