--- a/src/common/io/Cargo.toml
+++ b/src/common/io/Cargo.toml
@@ -18,23 +18,23 @@ chrono = { workspace = true }
 chrono-tz = { workspace = true }
 databend-common-base = { workspace = true }
 databend-common-exception = { workspace = true }
-enquote = "1.1.0"
+enquote = { workspace = true }
 enumflags2 = { workspace = true }
 ethnum = { workspace = true }
 geo = { workspace = true }
 geos = { workspace = true }
 geozero = { workspace = true }
-lexical-core = "0.8.5"
-micromarshal = "0.5.0"
-roaring = { version = "0.10.1", features = ["serde"] }
-scroll = "0.12.0"
+lexical-core = { workspace = true }
+micromarshal = { workspace = true }
+roaring = { workspace = true, features = ["serde"] }
+scroll = { workspace = true }
 serde = { workspace = true }
-wkt = "0.10.3"
+wkt = { workspace = true }
 
 [dev-dependencies]
-aho-corasick = { version = "1.0.1" }
+aho-corasick = { workspace = true }
 rand = { workspace = true }
-rmp-serde = "1.1.1"
+rmp-serde = { workspace = true }
 
 [package.metadata.cargo-machete]
 ignored = ["geos"]
