--- a/src/common/license/Cargo.toml
+++ b/src/common/license/Cargo.toml
@@ -13,7 +13,7 @@ test = true
 [dependencies]
 databend-common-base = { workspace = true }
 databend-common-exception = { workspace = true }
-jwt-simple = "0.11.0"
+jwt-simple = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 
