--- a/src/query/formats/Cargo.toml
+++ b/src/query/formats/Cargo.toml
@@ -11,11 +11,6 @@ doctest = false
 test = true
 
 [dependencies]
-aho-corasick = { version = "1.0.1" }
-async-trait = { workspace = true }
-base64 = "0.21.0"
-bstr = "1.0.1"
-chrono-tz = { workspace = true }
 databend-common-arrow = { workspace = true }
 databend-common-base = { workspace = true }
 databend-common-exception = { workspace = true }
@@ -25,21 +20,27 @@ databend-common-meta-app = { workspace = true }
 databend-common-settings = { workspace = true }
 databend-storages-common-blocks = { workspace = true }
 databend-storages-common-table-meta = { workspace = true }
+
+aho-corasick = { workspace = true }
+async-trait = { workspace = true }
+base64 = { workspace = true }
+bstr = { workspace = true }
+chrono-tz = { workspace = true }
 geos = { workspace = true }
 geozero = { workspace = true }
-hex = "0.4.3"
+hex = { workspace = true }
 jsonb = { workspace = true }
-lexical-core = "0.8.5"
+lexical-core = { workspace = true }
 match-template = { workspace = true }
-micromarshal = "0.7.0"
-num = "0.4.0"
-num-traits = "0.2.15"
-roaring = { version = "0.10.1", features = ["serde"] }
+micromarshal = { workspace = true }
+num = { workspace = true }
+num-traits = { workspace = true }
+roaring = { workspace = true, features = ["serde"] }
 serde_json = { workspace = true }
 
 [dev-dependencies]
 databend-common-arrow = { workspace = true }
-pretty_assertions = "1.3.0"
+pretty_assertions = { workspace = true }
 tokio = { workspace = true }
 
 [lints]
