--- a/src/query/sql/Cargo.toml
+++ b/src/query/sql/Cargo.toml
@@ -18,12 +18,12 @@ storage-hdfs = ["databend-common-config/storage-hdfs"]
 ahash = { version = "0.8.2", features = ["no-rng"] }
 anyhow = { workspace = true }
 async-backtrace = { workspace = true }
-async-recursion = "1.1.1"
+async-recursion = { workspace = true }
 async-trait = { workspace = true }
 chrono = { workspace = true }
 chrono-tz = { workspace = true }
-cidr = { version = "0.2.2" }
-cron = "0.12.0"
+cidr = { workspace = true }
+cron = { workspace = true }
 ctor = { workspace = true }
 dashmap = { workspace = true }
 databend-common-ast = { workspace = true }
