--- a/src/query/storages/orc/Cargo.toml
+++ b/src/query/storages/orc/Cargo.toml
@@ -6,6 +6,9 @@ license = { workspace = true }
 publish = { workspace = true }
 edition = { workspace = true }
 
+[package.metadata.cargo-machete]
+ignored = ["serde"]
+
 [lib]
 doctest = false
 test = true
