--- a/src/tests/sqlsmith/Cargo.toml
+++ b/src/tests/sqlsmith/Cargo.toml
@@ -9,23 +9,23 @@ edition = { workspace = true }
 [dependencies]
 chrono-tz = { workspace = true }
 clap = { workspace = true }
-databend-client = { git = "https://github.com/datafuselabs/bendsql/", rev = "7658a5" }
+databend-client = { workspace = true }
 databend-common-ast = { workspace = true }
 databend-common-expression = { workspace = true }
 databend-common-formats = { workspace = true }
 databend-common-functions = { workspace = true }
 databend-common-io = { workspace = true }
 databend-common-sql = { workspace = true }
-databend-driver = { git = "https://github.com/datafuselabs/bendsql/", rev = "7658a5" }
-databend-sql = { git = "https://github.com/datafuselabs/bendsql/", rev = "7658a5" }
+databend-driver = { workspace = true }
+databend-driver-core = { workspace = true }
 ethnum = { workspace = true }
 itertools = { workspace = true }
 jsonb = { workspace = true }
 rand = { workspace = true }
 tokio = { workspace = true }
 tokio-stream = { workspace = true }
-tracing = "0.1.37"
-tracing-subscriber = "0.3.17"
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 
 [[bin]]
 name = "databend-sqlsmith"
