--- a/src/meta/service/Cargo.toml
+++ b/src/meta/service/Cargo.toml
@@ -25,7 +25,7 @@ io-uring = [
 anyerror = { workspace = true }
 anyhow = { workspace = true }
 async-trait = { workspace = true }
-backon = "0.4"
+backon = { workspace = true }
 clap = { workspace = true }
 databend-common-arrow = { workspace = true }
 databend-common-base = { workspace = true }
@@ -50,9 +50,9 @@ http = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
 logcall = { workspace = true }
-maplit = "1.0.2"
+maplit = { workspace = true }
 poem = { workspace = true }
-prometheus-client = "0.22"
+prometheus-client = { workspace = true }
 prost = { workspace = true }
 semver = { workspace = true }
 serde = { workspace = true }
@@ -64,14 +64,14 @@ tonic = { workspace = true }
 tonic-reflection = { workspace = true }
 
 [dev-dependencies]
-env_logger = "0.10.0"
-maplit = "1.0.2"
-pretty_assertions = "1.3.0"
+env_logger = { workspace = true }
+maplit = { workspace = true }
+pretty_assertions = { workspace = true }
 regex = { workspace = true }
 reqwest = { workspace = true }
-temp-env = "0.3.0"
-tempfile = "3.4.0"
-test-harness = "0.1.1"
+temp-env = { workspace = true }
+tempfile = { workspace = true }
+test-harness = { workspace = true }
 
 [build-dependencies]
 databend-common-building = { workspace = true }
