refactor: Align versions for arrow, opendal, hyper, tonic, prost (#16704)
* Build pass

Signed-off-by: Xuanwo <github@xuanwo.io>

* Format toml

Signed-off-by: Xuanwo <github@xuanwo.io>

* Make clippy happy

Signed-off-by: Xuanwo <github@xuanwo.io>

* remove boring

Signed-off-by: Xuanwo <github@xuanwo.io>

* Make clippy happy

Signed-off-by: Xuanwo <github@xuanwo.io>

* fix scacar

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix logging build

Signed-off-by: Xuanwo <github@xuanwo.io>

* bump databend driver

Signed-off-by: Xuanwo <github@xuanwo.io>

* format toml

Signed-off-by: Xuanwo <github@xuanwo.io>

* Update parquet result

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix iceberg

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix tests

Signed-off-by: Xuanwo <github@xuanwo.io>

* Polish deps

Signed-off-by: Xuanwo <github@xuanwo.io>

* format toml

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix test

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix test

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix tests

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix tests

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix build

Signed-off-by: Xuanwo <github@xuanwo.io>

* Disable tests

Signed-off-by: Xuanwo <github@xuanwo.io>

---------

Signed-off-by: Xuanwo <github@xuanwo.io>

--- a/src/common/tracing/Cargo.toml
+++ b/src/common/tracing/Cargo.toml
@@ -11,7 +11,6 @@ doctest = false
 test = true
 
 [dependencies]
-anyhow = { workspace = true }
 backtrace = { workspace = true, features = ["std", "serialize-serde"] }
 bincode = { workspace = true }
 chrono = { workspace = true }
@@ -23,15 +22,14 @@ fastrace-opentelemetry = { workspace = true }
 itertools = { workspace = true }
 libc = { workspace = true }
 log = { workspace = true }
-logforth = { version = "0.12", features = [
+logforth = { version = "0.14", features = [
     'json',
     'rolling_file',
     'opentelemetry',
     'fastrace',
-    "env-filter",
 ] }
 opentelemetry = { workspace = true }
-opentelemetry-otlp = { workspace = true }
+opentelemetry-otlp = { workspace = true, features = ["reqwest-client"] }
 opentelemetry_sdk = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
