--- a/src/meta/client/Cargo.toml
+++ b/src/meta/client/Cargo.toml
@@ -15,6 +15,7 @@ test = true
 
 [dependencies]
 anyerror = { workspace = true }
+async-backtrace = { workspace = true }
 databend-common-arrow = { workspace = true }
 databend-common-base = { workspace = true }
 databend-common-grpc = { workspace = true }
