--- a/src/query/expression/Cargo.toml
+++ b/src/query/expression/Cargo.toml
@@ -28,6 +28,7 @@ databend-common-ast = { workspace = true }
 databend-common-base = { workspace = true }
 databend-common-datavalues = { workspace = true }
 databend-common-exception = { workspace = true }
+databend-common-grpc = { workspace = true }
 databend-common-hashtable = { workspace = true }
 databend-common-io = { workspace = true }
 educe = { workspace = true }
@@ -38,6 +39,7 @@ geo = { workspace = true }
 geos = { workspace = true }
 geozero = { workspace = true }
 hex = { workspace = true }
+hyper-util = { workspace = true }
 itertools = { workspace = true }
 jsonb = { workspace = true }
 lexical-core = { workspace = true }
