--- a/src/query/ee_features/background_service/Cargo.toml
+++ b/src/query/ee_features/background_service/Cargo.toml
@@ -17,6 +17,7 @@ async-backtrace = { workspace = true }
 async-trait = { workspace = true }
 databend-common-base = { workspace = true }
 databend-common-exception = { workspace = true }
+databend-common-expression = { workspace = true }
 databend-common-meta-app = { workspace = true }
 serde = { workspace = true }
 
