--- a/Cargo.toml
+++ b/Cargo.toml
@@ -210,9 +210,14 @@ arrow-ipc = { version = "53" }
 arrow-ord = { version = "53" }
 arrow-schema = { version = "53", features = ["serde"] }
 arrow-select = { version = "53" }
-arrow-udf-js = "0.5.0"
-arrow-udf-python = "0.4.0"
-arrow-udf-wasm = "0.4.0"
+
+# arrow-udf-js = "0.5.0"
+# arrow-udf-python = "0.4.0"
+# arrow-udf-wasm = "0.4.0"
+arrow-udf-js = { git = "https://github.com/arrow-udf/arrow-udf", rev = "80b09d6" }
+arrow-udf-python = { git = "https://github.com/arrow-udf/arrow-udf", rev = "80b09d6" }
+arrow-udf-wasm = { git = "https://github.com/arrow-udf/arrow-udf", rev = "80b09d6" }
+
 async-backtrace = "0.2"
 async-trait = { version = "0.1.77" }
 backtrace = "0.3.73"
