--- a/src/binaries/Cargo.toml
+++ b/src/binaries/Cargo.toml
@@ -15,7 +15,7 @@ memory-profiling = [
 ]
 python-udf = ["databend-query/python-udf"]
 simd = ["databend-query/simd"]
-jemalloc = ["databend-common-base/jemalloc"]
+jemalloc = ["databend-common-base/jemalloc", "databend-query/jemalloc"]
 io-uring = [
     "databend-query/io-uring",
 ]
