--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -12,9 +12,10 @@ test = true
 
 [features]
 tracing = ["tokio/tracing"]
-jemalloc = []
+jemalloc = ["tikv-jemalloc-sys", "tikv-jemalloc-ctl"]
 disable_initial_exec_tls = ["tikv-jemalloc-sys/disable_initial_exec_tls"]
 memory-profiling = [
+    "jemalloc",
     "tikv-jemalloc-sys/stats",
     "tikv-jemalloc-sys/profiling",
     "tikv-jemalloc-sys/unprefixed_malloc_on_supported_platforms",
@@ -54,8 +55,8 @@ semver = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 state = { workspace = true }
-tikv-jemalloc-ctl = { workspace = true }
-tikv-jemalloc-sys = { workspace = true }
+tikv-jemalloc-ctl = { workspace = true, optional = true }
+tikv-jemalloc-sys = { workspace = true, optional = true }
 tokio = { workspace = true }
 unicode-segmentation = { workspace = true }
 uuid = { workspace = true }
