--- a/src/query/service/Cargo.toml
+++ b/src/query/service/Cargo.toml
@@ -16,7 +16,7 @@ default = ["simd"]
 simd = ["databend-common-arrow/simd"]
 python-udf = ["arrow-udf-python"]
 disable_initial_exec_tls = ["databend-common-base/disable_initial_exec_tls"]
-
+jemalloc = ["databend-common-storages-system/jemalloc"]
 memory-profiling = ["databend-common-base/memory-profiling", "databend-common-http/memory-profiling"]
 storage-hdfs = ["opendal/services-hdfs", "databend-common-storage/storage-hdfs"]
 io-uring = [
