--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -32,6 +32,7 @@ ctrlc = { workspace = true }
 enquote = { workspace = true }
 fastrace = { workspace = true }
 futures = { workspace = true }
+http = { workspace = true }
 libc = { workspace = true }
 log = { workspace = true }
 logcall = { workspace = true }
@@ -39,6 +40,7 @@ micromarshal = { workspace = true }
 num-traits = { workspace = true }
 num_cpus = { workspace = true }
 once_cell = { workspace = true }
+opendal = { workspace = true }
 parking_lot = { workspace = true }
 pin-project-lite = { workspace = true }
 pprof = { workspace = true }
