--- a/Cargo.toml
+++ b/Cargo.toml
@@ -298,7 +298,7 @@ parking_lot = "0.12.1"
 parquet = { version = "53", features = ["async"] }
 paste = "1.0.15"
 pin-project-lite = "0.2.9"
-poem = { version = "3.0", features = ["openssl-tls", "multipart", "compression"] }
+poem = { version = "3.0", features = ["openssl-tls", "multipart", "compression", "cookie"] }
 pprof = { version = "0.13.0", features = [
     "flamegraph",
     "protobuf-codec",
@@ -342,7 +342,7 @@ tokio-stream = "0.1.11"
 tonic = { version = "0.12.3", features = ["transport", "codegen", "prost", "tls-roots", "tls"] }
 tonic-build = { version = "0.12.3" }
 tonic-reflection = { version = "0.12.3" }
-tower = "0.5.1"
+tower = { version = "0.5.1", features = ["util"] }
 tower-service = "0.3.3"
 typetag = "0.2.3"
 unicode-segmentation = "1.10.1"
