refactor: Enforce all deps must be declared at root
Signed-off-by: Xuanwo <github@xuanwo.io>

--- a/.github/actions/check/action.yml
+++ b/.github/actions/check/action.yml
@@ -38,7 +38,9 @@ runs:
 
     - name: Check toml format
       shell: bash
-      run: taplo fmt --check
+      run: |
+        taplo check
+        taplo fmt --check
 
     - name: Audit dependencies
       shell: bash
