--- a/Cargo.toml
+++ b/Cargo.toml
@@ -196,6 +196,12 @@ databend-storages-common-session = { path = "src/query/storages/common/session" 
 databend-storages-common-stage = { path = "src/query/storages/common/stage" }
 databend-storages-common-table-meta = { path = "src/query/storages/common/table_meta" }
 
+# Specific dependencies
+parquet2 = { package = "databend-common-parquet2", path = "src/common/parquet2", default-features = false, features = [
+    "serde_types",
+    "async",
+] }
+
 # Crates.io dependencies
 anyerror = { version = "=0.1.10" }
 anyhow = { version = "1.0.65" }
@@ -218,6 +224,7 @@ async-trait = { version = "0.1.77" }
 backtrace = "0.3.73"
 base64 = "0.22"
 bincode = { version = "2.0.0-rc.3", features = ["serde", "std", "alloc"] }
+bincode_v1 = { package = "bincode", version = "1.3.3" }
 borsh = { version = "1.2.1", features = ["derive"] }
 bumpalo = "3.12.0"
 byteorder = "1.4.3"
@@ -247,6 +254,7 @@ geo = { version = "0.28.0", features = ["use-serde"] }
 geos = { version = "9.0.0", features = ["static", "geo", "geo-types"] }
 geozero = { version = "0.14.0", features = ["default", "with-wkb", "with-geos", "with-geojson"] }
 hashbrown = { version = "0.15.0", default-features = false }
+hashbrown_v0_14 = { package = "hashbrown", version = "0.14.0", default-features = false, features = ["ahash"] }
 hickory-resolver = "0.24"
 http = "1"
 hyper = "1"
@@ -421,16 +429,99 @@ socket2 = "0.5.3"
 sqlx = { version = "0.8", features = ["mysql", "runtime-tokio"] }
 sysinfo = "0.30"
 # FIXME: better to replace by chrono
+ahash = "0.8"
+approx = "0.5.1"
+aws-config = "1.1.7"
+aws-sdk-s3 = "1.17.0"
+brotli = "3.3"
+cbordata = { version = "0.6.0" }
+cfg-if = "1.0.0"
 cidr = { version = "0.2.2" }
+convert_case = "0.6.0"
+crossbeam-channel = "0.5.6"
+csv-core = "0.1.11"
+defer = "0.2"
+dyn-clone = "1.0.9"
+enum_dispatch = "0.3.13"
+faststr = "0.2"
+flagset = "0.4"
+flate2 = "1"
+globiter = "0.1"
+hive_metastore = "0.1.0"
+hostname = "0.3.1"
+indexmap = "2.0.0"
+levenshtein_automata = "0.2.1"
+logforth = { version = "0.14", features = [
+    'json',
+    'rolling_file',
+    'opentelemetry',
+    'fastrace',
+] }
+mockall = "0.11.2"
+ndarray = "0.15.6"
 p256 = "0.13"
+parquet-format-safe = "0.2"
 passwords = { version = "3.1.16", features = ["common-password"] }
+percent-encoding = "2.3.1"
+pot = "2.0.0"
+prqlc = "0.11.3"
+rayon = "1.9.0"
+seq-macro = { version = "0.3", default-features = false }
+serde_repr = "0.1.9"
+simsearch = "0.2"
+snailquote = "0.3.1"
+snap = "1"
+streaming-decompression = "0.1"
+strum = "0.24.1"
+sys-info = "0.9"
+tantivy-fst = "0.5"
 temp-env = "0.3.0"
 test-harness = "0.1.1"
 time = "0.3.14"
 toml = { version = "0.8", default-features = false }
+unindent = "0.2"
 url = "2.3.1"
+volo-thrift = "0.10"
 wiremock = "0.6"
 xorf = { version = "0.11.0", default-features = false, features = ["binary-fuse"] }
+xxhash-rust = { version = "0.8", features = ["xxh64"] }
+zstd = "0.12.3"
+# Temp workaround, should come back to tagged version after https://github.com/Nemo157/async-compression/issues/150 resolved.
+async-compression = { git = "https://github.com/datafuse-extras/async-compression", rev = "dc81082", features = [
+    "futures-io",
+    "all-algorithms",
+] }
+async-std = "1.12"
+bitpacking = "0.8.0"
+bytemuck = { version = "1", features = ["derive"] }
+either = "1.9"
+fallible-streaming-iterator = "0.1"
+foreign_vec = "0.1.0"
+hashlink = "0.8"
+limits-rs = "0.2.0"
+pin-project = "1"
+proptest = { version = "1", default-features = false, features = ["std"] }
+quanta = "0.11.1"
+ringbuffer = "0.14.2"
+serde_derive = "1"
+streaming-iterator = "0.1"
+tokio-util = { version = "0.7", features = ["compat"] }
+
+# AST needed
+cargo-license = "0.6.1"
+cargo_metadata = "0.18"
+fast-float = "0.2.0"
+gix = "0.63.0"
+indent = "0.1.1"
+logos = "0.12.1"
+nom = "7.1.1"
+nom-rule = "0.4"
+pratt = "0.4.0"
+pretty = "0.11.3"
+rspack-codespan-reporting = "0.11"
+strsim = "0.10"
+strum_macros = "0.24"
+vergen = { version = "8.3.1", default-features = false, features = ["build", "cargo", "git", "gix", "rustc"] }
 
 # Observability
 env_logger = "0.11"
