--- a/src/common/metrics/Cargo.toml
+++ b/src/common/metrics/Cargo.toml
@@ -15,15 +15,14 @@ databend-common-base = { workspace = true }
 prometheus-client = { workspace = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
-procfs = "0.15.1"
+procfs = { workspace = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
 
 [dev-dependencies.tokio]
-default-features = false
 features = ["io-util", "net", "sync", "rt-multi-thread", "macros"]
-version = "1.26.0"
+workspace = true
 
 [lints]
 workspace = true
