--- a/src/query/pipeline/core/Cargo.toml
+++ b/src/query/pipeline/core/Cargo.toml
@@ -18,8 +18,8 @@ databend-common-exception = { workspace = true }
 databend-common-expression = { workspace = true }
 fastrace = { workspace = true }
 futures = { workspace = true }
-log = "0.4.21"
-petgraph = "0.6.2"
+log = { workspace = true }
+petgraph = { workspace = true }
 serde = { workspace = true }
 
 [dev-dependencies]
