--- a/src/query/script/Cargo.toml
+++ b/src/query/script/Cargo.toml
@@ -16,9 +16,9 @@ derive-visitor = { workspace = true }
 fastrace = { workspace = true }
 
 [dev-dependencies]
-goldenfile = "1.4"
+goldenfile = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync"] }
-unindent = "0.2.3"
+unindent = { workspace = true }
 
 [lints]
 workspace = true
