--- a/src/query/storages/common/index/Cargo.toml
+++ b/src/query/storages/common/index/Cargo.toml
@@ -15,7 +15,7 @@ ignored = ["xorfilter-rs", "match-template"]
 
 [dependencies]
 anyerror = { workspace = true }
-cbordata = { version = "0.6.0" }
+cbordata = { workspace = true }
 databend-common-arrow = { workspace = true }
 databend-common-ast = { workspace = true }
 databend-common-exception = { workspace = true }
@@ -24,15 +24,15 @@ databend-common-functions = { workspace = true }
 databend-storages-common-table-meta = { workspace = true }
 fastrace = { workspace = true }
 jsonb = { workspace = true }
-levenshtein_automata = "0.2.1"
+levenshtein_automata = { workspace = true }
 log = { workspace = true }
 match-template = { workspace = true }
 parquet = { workspace = true }
-roaring = "0.10.1"
+roaring = { workspace = true }
 serde = { workspace = true }
 tantivy = { workspace = true }
 tantivy-common = { workspace = true }
-tantivy-fst = "0.5"
+tantivy-fst = { workspace = true }
 thiserror = { workspace = true }
 xorfilter-rs = { workspace = true, features = ["cbordata"] }
 
