--- a/src/query/storages/hive/hive/Cargo.toml
+++ b/src/query/storages/hive/hive/Cargo.toml
@@ -12,7 +12,7 @@ test = true
 
 [dependencies]
 async-backtrace = { workspace = true }
-async-recursion = "1.1.1"
+async-recursion = { workspace = true }
 async-trait = { workspace = true }
 chrono = { workspace = true }
 databend-common-base = { workspace = true }
@@ -32,16 +32,16 @@ databend-common-storages-parquet = { workspace = true }
 databend-storages-common-pruner = { workspace = true }
 databend-storages-common-table-meta = { workspace = true }
 fastrace = { workspace = true }
-faststr = "0.2"
+faststr = { workspace = true }
 futures = { workspace = true }
-hive_metastore = "0.1.0"
+hive_metastore = { workspace = true }
 log = { workspace = true }
 opendal = { workspace = true }
 parquet = { workspace = true }
-recursive = "0.1.1"
+recursive = { workspace = true }
 serde = { workspace = true }
 typetag = { workspace = true }
-volo-thrift = "0.10"
+volo-thrift = { workspace = true }
 
 [lints]
 workspace = true
