--- a/src/binaries/Cargo.toml
+++ b/src/binaries/Cargo.toml
@@ -34,7 +34,7 @@ databend-enterprise-background-service = { workspace = true }
 databend-enterprise-query = { workspace = true }
 databend-query = { workspace = true }
 databend-storages-common-table-meta = { workspace = true }
-limits-rs = "0.2.0"
+limits-rs = { workspace = true }
 log = { workspace = true }
 opendal = { workspace = true }
 serde = { workspace = true }
