--- a/src/common/auth/Cargo.toml
+++ b/src/common/auth/Cargo.toml
@@ -17,7 +17,7 @@ databend-common-base = { workspace = true }
 http = { workspace = true }
 
 [dev-dependencies]
-tempfile = "3.4.0"
+tempfile = { workspace = true }
 
 [lints]
 workspace = true
