--- a/src/common/http/Cargo.toml
+++ b/src/common/http/Cargo.toml
@@ -22,11 +22,11 @@ http = { workspace = true }
 log = { workspace = true }
 poem = { workspace = true }
 serde = { workspace = true }
-tempfile = { version = "3.4.0", optional = true }
+tempfile = { workspace = true, optional = true }
 thiserror = { workspace = true }
 
 [dev-dependencies]
-pretty_assertions = "1.3.0"
+pretty_assertions = { workspace = true }
 
 [lints]
 workspace = true
