--- a/src/common/vector/Cargo.toml
+++ b/src/common/vector/Cargo.toml
@@ -12,10 +12,10 @@ test = true
 
 [dependencies]
 databend-common-exception = { workspace = true }
-ndarray = "0.15.6"
+ndarray = { workspace = true }
 
 [dev-dependencies]
-approx = "0.5.1"
+approx = { workspace = true }
 
 [lints]
 workspace = true
