--- a/src/meta/app/Cargo.toml
+++ b/src/meta/app/Cargo.toml
@@ -48,7 +48,7 @@ anyhow = { workspace = true }
 ignored = ["num-traits"]
 
 [build-dependencies]
-databend-common-building = { path = "../../common/building" }
+databend-common-building = { workspace = true }
 tonic-build = { workspace = true }
 
 [lints]
