--- a/src/meta/raft-store/Cargo.toml
+++ b/src/meta/raft-store/Cargo.toml
@@ -34,11 +34,11 @@ fastrace = { workspace = true }
 futures = { workspace = true }
 futures-async-stream = { workspace = true }
 futures-util = { workspace = true }
-hostname = "0.3.1"
+hostname = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
-maplit = "1.0.2"
-num = "0.4.0"
+maplit = { workspace = true }
+num = { workspace = true }
 openraft = { workspace = true }
 ordq = { workspace = true }
 rotbl = { workspace = true }
@@ -51,9 +51,9 @@ tokio = { workspace = true }
 
 [dev-dependencies]
 databend-common-base = { workspace = true }
-pretty_assertions = "1.3.0"
-tempfile = "3.4.0"
-test-harness = "0.1.1"
+pretty_assertions = { workspace = true }
+tempfile = { workspace = true }
+test-harness = { workspace = true }
 tokio = { workspace = true }
 
 [lints]
