--- a/src/meta/sled-store/Cargo.toml
+++ b/src/meta/sled-store/Cargo.toml
@@ -26,15 +26,15 @@ openraft = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 sled = { workspace = true }
-tempfile = "3.4.0"
+tempfile = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
 databend-common-base = { workspace = true }
-pretty_assertions = "1.3.0"
-test-harness = "0.1.1"
+pretty_assertions = { workspace = true }
+test-harness = { workspace = true }
 tokio = { workspace = true }
 
 [lints]
