--- a/src/meta/types/Cargo.toml
+++ b/src/meta/types/Cargo.toml
@@ -20,8 +20,8 @@ deepsize = { workspace = true }
 derive_more = { workspace = true }
 futures-util = { workspace = true }
 log = { workspace = true }
-num-derive = "0.3.3"
-num-traits = "0.2.15"
+num-derive = { workspace = true }
+num-traits = { workspace = true }
 openraft = { workspace = true }
 prost = { workspace = true }
 rotbl = { workspace = true }
