--- a/src/query/config/Cargo.toml
+++ b/src/query/config/Cargo.toml
@@ -32,10 +32,10 @@ semver = { workspace = true }
 serde = { workspace = true }
 serde_with = { workspace = true }
 serfig = { workspace = true }
-strum = "0.24.1"
+strum = { workspace = true }
 
 [dev-dependencies]
-pretty_assertions = "1.3.0"
+pretty_assertions = { workspace = true }
 
 [build-dependencies]
 databend-common-building = { workspace = true }
