--- a/src/query/management/Cargo.toml
+++ b/src/query/management/Cargo.toml
@@ -27,7 +27,7 @@ fastrace = { workspace = true }
 futures = { workspace = true }
 log = { workspace = true }
 prost = { workspace = true }
-serde = "1.0.150"
+serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 
@@ -35,7 +35,7 @@ thiserror = { workspace = true }
 databend-common-expression = { workspace = true }
 databend-common-meta-embedded = { workspace = true }
 databend-common-storage = { workspace = true }
-mockall = "0.11.2"
+mockall = { workspace = true }
 
 [lints]
 workspace = true
