--- a/taplo.toml
+++ b/taplo.toml
@@ -34,3 +34,8 @@ crlf = false
 [[rule]]
 keys = ["dependencies", "dev-dependencies", "build-dependencies", "workspace.dependencies", "patch.crates-io"]
 formatting = { reorder_keys = true }
+
+[[rule]]
+schema = { path = ".config/workspace-schema.json" }
+include = ["src/**/Cargo.toml", "tests/**/Cargo.toml"]
+exclude = ["src/**/fuzz/Cargo.toml", "src/bendpy/Cargo.toml"]
