--- a/.cargo/audit.toml
+++ b/.cargo/audit.toml
@@ -47,4 +47,6 @@ ignore = [
     "RUSTSEC-2024-0351",
     # gix-path: improperly resolves configuration path reported by Git
     "RUSTSEC-2024-0371",
+    # Remotely exploitable Denial of Service in Tonic, ignored temporarily 
+    "RUSTSEC-2024-0376",
 ]
