--- a/src/meta/raft-store/Cargo.toml
+++ b/src/meta/raft-store/Cargo.toml
@@ -29,8 +29,10 @@ databend-common-meta-sled-store = { workspace = true }
 databend-common-meta-stoerr = { workspace = true }
 databend-common-meta-types = { workspace = true }
 databend-common-tracing = { workspace = true }
+deepsize = { workspace = true }
 derive_more = { workspace = true }
 fastrace = { workspace = true }
+fs_extra = { workspace = true }
 futures = { workspace = true }
 futures-async-stream = { workspace = true }
 futures-util = { workspace = true }
@@ -41,6 +43,8 @@ maplit = { workspace = true }
 num = { workspace = true }
 openraft = { workspace = true }
 ordq = { workspace = true }
+raft-log = { workspace = true }
+rmp-serde = { workspace = true }
 rotbl = { workspace = true }
 semver = { workspace = true }
 serde = { workspace = true }
