--- a/src/meta/service/Cargo.toml
+++ b/src/meta/service/Cargo.toml
@@ -54,6 +54,7 @@ maplit = { workspace = true }
 poem = { workspace = true }
 prometheus-client = { workspace = true }
 prost = { workspace = true }
+raft-log = { workspace = true }
 semver = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
