--- a/src/meta/types/Cargo.toml
+++ b/src/meta/types/Cargo.toml
@@ -24,6 +24,7 @@ num-derive = { workspace = true }
 num-traits = { workspace = true }
 openraft = { workspace = true }
 prost = { workspace = true }
+raft-log = { workspace = true }
 rotbl = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
