--- a/src/query/expression/Cargo.toml
+++ b/src/query/expression/Cargo.toml
@@ -32,6 +32,7 @@ databend-common-grpc = { workspace = true }
 databend-common-hashtable = { workspace = true }
 databend-common-io = { workspace = true }
 educe = { workspace = true }
+either = { workspace = true }
 enum-as-inner = { workspace = true }
 ethnum = { workspace = true, features = ["serde", "macros", "borsh"] }
 futures = { workspace = true }
