--- a/Cargo.toml
+++ b/Cargo.toml
@@ -542,6 +542,7 @@ databend-driver = { version = "0.22" }
 databend-driver-core = { version = "0.22" }
 msql-srv = "0.11.0"
 mysql_common = "0.32.4"
+quickcheck = "1.0"
 sqllogictest = "0.21.0"
 sqlparser = "0.50.0"
 
