support redis dic batch

--- a/src/common/exception/Cargo.toml
+++ b/src/common/exception/Cargo.toml
@@ -28,6 +28,7 @@ opendal = { workspace = true }
 parquet = { workspace = true }
 paste = { workspace = true }
 prost = { workspace = true }
+redis = { workspace = true }
 reqwest = { workspace = true }
 rustc-demangle = { workspace = true }
 serde = { workspace = true }
