--- a/src/query/expression/Cargo.toml
+++ b/src/query/expression/Cargo.toml
@@ -54,6 +54,7 @@ num-bigint = { workspace = true }
 num-traits = { workspace = true }
 rand = { workspace = true }
 recursive = { workspace = true }
+redis = { workspace = true }
 roaring = { workspace = true, features = ["serde"] }
 rust_decimal = { workspace = true }
 serde = { workspace = true }
