feat(metrics): new storage_http_requests_count

--- a/src/common/storage/Cargo.toml
+++ b/src/common/storage/Cargo.toml
@@ -21,6 +21,7 @@ databend-common-base = { workspace = true }
 databend-common-exception = { workspace = true }
 databend-common-expression = { workspace = true }
 databend-common-meta-app = { workspace = true }
+databend-common-metrics = { workspace = true }
 databend-enterprise-storage-encryption = { workspace = true }
 flagset = { workspace = true }
 futures = { workspace = true }
